--- a/Home/home.html
+++ b/Home/home.html
@@ -68,11 +68,24 @@
       <h2 class="text-text-light dark:text-text-dark text-2xl font-bold leading-tight tracking-tight flex-1">
         Hola, Alex
       </h2>
-      <div class="flex w-12 items-center justify-end">
+
+      <!-- Contenedor acciones del header -->
+      <div class="flex items-center gap-3">
+        <!-- NUEVO BOTÓN: Crear Rutina -->
         <button
-          class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 w-12 bg-transparent text-text-light dark:text-text-dark text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0">
-          <span class="material-symbols-outlined text-3xl">account_circle</span>
+          id="createRoutineBtn"
+          class="flex items-center gap-2 rounded-full bg-primary text-white text-sm font-medium leading-normal px-4 py-2 shadow-sm hover:opacity-90 transition">
+          <span class="material-symbols-outlined text-base">add</span>
+          <span>Crear rutina</span>
         </button>
+
+        <!-- Avatar existente -->
+        <div class="flex w-12 items-center justify-end">
+          <button
+            class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 w-12 bg-transparent text-text-light dark:text-text-dark text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0">
+            <span class="material-symbols-outlined text-3xl">account_circle</span>
+          </button>
+        </div>
       </div>
     </header>
 
